--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:postgresql://localhost/librarydemo
+spring.datasource.username=Aizat
+spring.datasource.password=1234
+spring.jpa.generate-ddl=true
 
+upload.path=/images
