Cardinal change of application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,1 @@
-spring.datasource.url=jdbc:postgresql://localhost/librarydemo
-spring.datasource.username=Aizat
-spring.datasource.password=1234
-spring.jpa.generate-ddl=true
-
-upload.path=/images
+upload.path=C:/Users/asus/AppData/Local/Temp/home/uploads
