--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/library_db
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.generate-ddl=true
+
 upload.path=C:/Users/asus/AppData/Local/Temp/home/uploads
 
 spring.servlet.multipart.max-file-size=10MB
